Upgrade dependencies and fix corresponding compilation problems.