@@ -21,8 +21,8 @@ lazy val baseSettings: Seq[sbt.Def.Setting[_]] = {
   )
 }
 
-lazy val pluginSettings = scriptedSettings ++ Seq(
-  scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value),
+lazy val pluginSettings = Seq(
+  scriptedLaunchOpts ++= Seq("-Xmx1024M", "-Dplugin.version=" + version.value),
   sbtPlugin          := true,
   scalacOptions ++= Seq(
     "-encoding",
@@ -38,7 +38,8 @@ lazy val pluginSettings = scriptedSettings ++ Seq(
     "-Ywarn-numeric-widen",
     "-Ywarn-value-discard",
     "-Xfuture",
-    "-Xlint"
+    "-Xlint",
+    "-Xfatal-warnings"
   )
 )
 
@@ -46,8 +47,8 @@ lazy val root = Project(id = "kantan-sbt", base = file("."))
   .settings(moduleName := "root")
   .settings(baseSettings)
   .settings(
-    publish         := (),
-    publishLocal    := (),
+    publish         := {},
+    publishLocal    := {},
     publishArtifact := false
   )
   .aggregate(core, strict, kantan, boilerplate, scalastyle, scalafmt)
